--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "apis.io-openapis",
   "description": "List of OpenAPI specifications in apis.io",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "author": "Jan Forst",
   "dependencies": {},
   "devDependencies": {
@@ -10,5 +10,8 @@
   },
   "license": "MIT",
   "main": "index.json",
-  "private": true
+  "private": true,
+  "scripts": {
+    "build": "node build.js"
+  }
 }
